[레거시 코드 리팩터링 - 3단계] 말랑(신동훈) 미션 제출합니다. (#645)
* 메뉴 정보가 변경되더라도 주문 항목이 변경되지 않게 Snapshot을 적용하여 구현

* 스냅샷의 정적 팩터리 메서드 제거

* MenuProduct에서 Product로의 직접 참조 제거

* Order에서 OrderTable로의 의존성 제거

* Polish OrderService

* Menu 등록 검증을 생성자가 아닌 메서드를 통해 진행

* polishing MenuService, MenuValidator

* Order 생성 검증을 생성자가 아닌 메서드에서 진행

* reformat code

* OrderTableValidator 메서드 네이밍 변경

* OrderTable와 Order와의 양방향 의존성 해결을 위한 인터페이스 도입

* 사용하지 않는 메서드 제거